adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam perspiciatis cum quas soluta dicta? Ex dolor ea, earum distinctio, quos unde qui temporibus obcaecati ipsam nulla nihil quam tempora similique!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod tempore ullam dolor, magnam vel nihil rerum, mollitia repudiandae nulla odio, porro distinctio iure cupiditate earum repellendus voluptatem iste accusamus praesentium.</p>
     <footer>
         <p>Criado por <strong>SistemasDSR_Juan</strong></p>
     </footer>
