--- a/exercicios/ex017/font02.html
+++ b/exercicios/ex017/font02.html
@@ -8,6 +8,12 @@
     <style>
         body{
             font:normal 16px arial, verdana, serif, sans-serif;
+            background-color: rgb(178, 211, 230);
+            background-image: url(../ex022/imagens/wallpaper002.jpg);
+            background-size: contain;
+            backface-visibility: hidden;
+            background-attachment: fixed;
+            background-repeat: repeat-y;
             text-align: left;
             
 
@@ -29,8 +35,10 @@
 <body>
     <h1>Tipos de alinhamentos</h1>
     <h2>Subititulo</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum magnam nostrum, facere maiores accusantium qui impedit rerum ipsam culpa itaque, numquam necessitatibus sed laudantium recusandae sequi, inventore vel et Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, eaque! Deleniti explicabo fugiat quis sit cum aperiam qui, obcaecati, itaque at sunt rem iure? Aut blanditiis maxime vel aperiam neque. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam obcaecati eligendi exercitationem harum quam hic quia quidem rem unde minus. Animi delectus pariatur dolor nostrum numquam tenetur mollitia a modi!</voluptatibus></p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum magnam nostrum, facere maiores accusantium qui impedit rerum ipsam culpa itaque, numquam necessitatibus sed laudantium recusandae sequi, inventore vel et Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, eaque! Deleniti explicabo fugiat quis sit cum aperiam qui, obcaecati, itaque at sunt rem iure? Aut blanditiis maxime vel aperiam neque. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam obcaecati eligendi exercitationem harum quam hic quia quidem rem unde minus. Animi delectus pariatur dolor nostrum numquam tenetur mollitia a modi!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nihil eum doloribus odio amet consequatur velit veritatis distinctio reprehenderit dolorum aliquam labore, iusto corrupti obcaecati iste debitis, dolores maiores eaque?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto suscipit omnis cum facilis tempora! Accusantium repudiandae esse, libero molestiae amet aliquid maiores tempore nesciunt reprehenderit pariatur. Corrupti laudantium molestiae animi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nemo veritatis enim rerum iusto, quisquam possimus optio perferendis nam distinctio facere repudiandae odio magni fugiat assumenda, ea tenetur cumque consectetur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus sequi nihil quis deserunt aliquam dolores atque perferendis id iure molestias aspernatur, assumenda quaerat veritatis dolorum eaque ab laborum reiciendis quia.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro dolore facere sequi debitis quas in perspiciatis labore rerum quod, vel ab laudantium obcaecati, doloremque maxime accusantium at necessitatibus eos odio?</p>
 </body>
 </html>
