--- a/exercicos udemy/d02/chale-hotel/index.html
+++ b/exercicos udemy/d02/chale-hotel/index.html
@@ -44,6 +44,56 @@
 			</div>
 
 		</div><!--/ fim topo-->
+
+		<div id="area-principal">
+			<div class="conteudo">
+				<h2>
+					Lorem ipsum dolor sit amet, consectetur
+				</h2>
+
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id congue velit, in cursus augue. Morbi vel orci mattis, condimentum arcu in, sodales ligula. Quisque sollicitudin erat vulputate libero fermentum, eu gravida velit mollis. Sed sed viverra nunc. Duis egestas sapien lectus, convallis sollicitudin leo porttitor non. Ut at massa ac tortor posuere accumsan at eu nunc. Nulla dui augue, dignissim vel diam in, tempus aliquam dui. Integer sed sem lorem. Nam a est sed sapien egestas tincidunt eget et nunc. Integer tristique nunc et nisl pharetra ultricies. Curabitur sit amet est lacus.
+					</p>
+
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id congue velit, in cursus augue. Morbi vel orci mattis, condimentum arcu in, sodales ligula.
+					</p>
+
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id congue velit, in cursus augue. Morbi vel orci mattis, condimentum arcu in, sodales ligula.
+					</p>
+
+			</div>
+		</div>
+
+		<div id="area-lateral">
+			<div class="conteudo">
+				<div>
+					<img src="imagens/apartamento.jpg" alt="">
+					<h2>Apartamento</h2>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore exercitationem ea perspiciatis repellat ear</p>
+				</div>
+
+				<div>
+					<img src="imagens/restaurante.jpg" alt="">
+					<h2>Restaurante</h2>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore exercitationem ea perspiciatis repellat ear</p>
+				</div>
+
+				<div>
+					<img src="imagens/piscina.jpg" alt="">
+					<h2>Piscina</h2>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore exercitationem ea perspiciatis repellat ear</p>
+				</div>
+			</div>
+		</div>
+
+		<div id="rodape">
+			<span>
+				&copy; Copyright 2008-2021 Chalé-Hotel 
+			</span>
+		</div>
+
 	</div><!--/ fim container-->
 
 </body>
