--- a/exercicos udemy/parallax/parallax.html
+++ b/exercicos udemy/parallax/parallax.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Efeito Parallax</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="shortcut icon" href="imagens/imagem6.jpg" type="image/x-icon">
 
 </head>
 <body>
@@ -18,7 +19,7 @@
 
     <div class="conteudo">
         <h3>Parallax</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia voluptas, distinctio ad, sapiente laboriosam iusto porro mollitia maxime eius sit fugiat saepe minima illum dolor illo, minus earum libero veniam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel necessitatibus maxime, voluptatum eum consequatur labore officiis repudiandae voluptates quibusdam dolor ipsam nam, ea minus fuga aut! Dignissimos est fuga laudantium? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, quisquam atque voluptatibus, ea error quibusdam sint iusto voluptate iste dolor nobis harum. Tenetur in amet quaerat voluptate eos, quae fugiat.</p>
+        <p>Lorem ipsum! dolor sit amet consectetur, adipisicing elit. Officia voluptas, distinctio ad, sapiente laboriosam iusto porro mollitia maxime eius sit fugiat saepe minima illum dolor illo, minus earum libero veniam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel necessitatibus maxime, voluptatum eum consequatur labore officiis repudiandae voluptates quibusdam dolor ipsam nam, ea minus fuga aut! Dignissimos est fuga laudantium? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, quisquam atque voluptatibus, ea error quibusdam sint iusto voluptate iste dolor nobis harum. Tenetur in amet quaerat voluptate eos, quae fugiat.</p>
 
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia voluptas, distinctio ad, sapiente laboriosam iusto porro mollitia maxime eius sit fugiat saepe minima illum dolor illo, minus earum libero veniam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel necessitatibus maxime, voluptatum eum consequatur labore officiis repudiandae voluptates quibusdam dolor ipsam nam, ea minus fuga aut! Dignissimos est fuga laudantium? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, quisquam atque voluptatibus, ea error quibusdam sint iusto voluptate iste dolor nobis harum. Tenetur in amet quaerat voluptate eos, quae fugiat.</p>
     </div>
