--- a/exercicos-udemy/bootstrap4/Elementos-Flutuantes.html
+++ b/exercicos-udemy/bootstrap4/Elementos-Flutuantes.html
@@ -29,10 +29,10 @@
             tela: sm, md, lg, xl
             alinhamento: left, right
      -->
-    <div class="float-sm">tela &gt;= 576px * </div><!--Small-->
-    <div class="float-">tela &gt;=  768px * </div><!--Medium-->
-    <div class="float-">tela &gt;= 992px * </div><!--Large-->
-    <div class="float-">tela &gt;= 1200px * </div><!--Extra Large-->
+    <div class="float-sm-right">tela &gt;= 576px * </div><!--Small-->
+    <div class="float-md-rght">tela &gt;=  768px * </div><!--Medium-->
+    <div class="float-lg-right">tela &gt;= 992px * </div><!--Large-->
+    <div class="float-xl-right">tela &gt;= 1200px * </div><!--Extra Large-->
 
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vestibulum elementum quam, a viverra ligula fringilla tempus. Ut tempor, dui eu semper aliquet, sem nisi pellentesque libero, suscipit porttitor risus magna vel lorem.
