--- a/exercicos-udemy/bootstrap4/index.html
+++ b/exercicos-udemy/bootstrap4/index.html
@@ -35,13 +35,17 @@
 
       <!-- Parágrafo Monospace-->
       <p class="text-monospace">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores odio amet ipsam ab tempora porro recusandae, earum voluptatem officiis tempore numquam corporis ea enim quae vitae culpa repudiandae? Voluptatem, cumque!</p>
-
-
-
-
-
-
-
+      <br>
+      <h3 class="pl-5 mt-5 mb-5 text-info font-weight-bold">Minha parte </h3> 
+    <div style="background:purple;">
+      <p class="text-success">vai fica loko</p>
+      <p class="text-primary">vai fica loko</p>
+      <p class="text-secondary">vai fica loko</p>
+      <p class="text-dark">vai fica loko</p>
+      <p class="text-dark-50">vai fica loko</p>
+      <p class="text-light">vai fica loko</p>
+      <p class="text-white-50">vai fica loko</p>
+  </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
