--- a/exercicios/ex023/tabela02.html
+++ b/exercicios/ex023/tabela02.html
@@ -8,6 +8,10 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
+            background-color: dimgray;
+        }
+        h1{
+            color: peachpuff;
         }
         table{
             width: 500px;
@@ -28,6 +32,15 @@
         thead, tfoot{
             background-color: rgb(68, 66, 66);
             color: white;
+        }
+
+        tbody > tr:nth-child(odd){/* 2n -1*/
+            background-color: lightslategrey;
+        }
+
+        tbody > tr:nth-child(even){ /* 2n */
+            background-color: lightgray;
+            font-weight: bold;
         }
         
     </style>
