--- a/exercicios/ex023/tabela02.html
+++ b/exercicios/ex023/tabela02.html
@@ -11,7 +11,8 @@
             background-color: dimgray;
         }
         h1{
-            color: peachpuff;
+            color: white;
+            font-size:1.1em;
         }
         table{
             width: 500px;
