Bootstrap: barra de navegação, botões...

--- a/exercicos-udemy/html-css/bootstrap4/apoio-botoes.html
+++ b/exercicos-udemy/html-css/bootstrap4/apoio-botoes.html
@@ -86,14 +86,20 @@
     </div>
 
     <h3>Botões dropdown</h3>
-    <div class="">
-        <button class="btn btn-success" type="button">
+
+    <!-- Para que os links apareção após precionar o botão usamos a CLASS = DROPDOWN-->
+    
+
+    <div class="dropdown"> 
+        <!-- Depois no botão utilizamos a CLASS = dropdown-toggle 
+            em seguida utilizamos data-toggle="dropdown" -->
+        <button class="btn btn-danger dropdown-toggle" data-toggle="dropdown" type="button">
             Clique
         </button>
-        <div>
-            <a href="#" class="">Link 1</a>
-            <a href="#" class="">Link 2</a>
-            <a href="#" class="">Link 3</a>
+        <div class="dropdown-menu">
+            <a href="#" class="dropdown-item">Link 1</a>
+            <a href="#" class="dropdown-item">Link 2</a>
+            <a href="#" class="dropdown-item">Link 3</a>
         </div>
     </div>
 
