--- a/exercicos-udemy/html-css/bootstrap4/apoio-barra-navegacao.html
+++ b/exercicos-udemy/html-css/bootstrap4/apoio-barra-navegacao.html
@@ -25,7 +25,7 @@
         flex-column
     -->
     <h2>Navegação simples / abas</h2>
-    <ul class="nav nav-pills flex-column">
+    <ul class="nav nav-tabs flex-column">
       <li class="nav-item ">
         <a href="" class="nav-link active">Home</a>
       </li>
