tabelas CeV exercícios

--- a/exercicios/ex023/tabela02.html
+++ b/exercicios/ex023/tabela02.html
@@ -17,6 +17,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th{
             border: 1px solid black;
@@ -28,6 +29,12 @@
             font-weight: bold;
             padding: 10px;
             background-color: lightgray;
+        }
+
+        thead > tr > th{
+            position: sticky;
+            top: 0;
+            background-color: rgb(68, 66, 66);
         }
 
         thead, tfoot{
@@ -42,6 +49,11 @@
         tbody > tr:nth-child(even){ /* 2n */
             background-color: lightgray;
             font-weight: bold;
+        }
+
+        p{
+            text-align:justify;
+            width: 560px;
         }
         
     </style>
@@ -186,6 +198,22 @@
         </tfoot>
 
     </table>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt quidem temporibus distinctio quaerat fuga nesciunt explicabo debitis recusandae quae iure tenetur, eaque modi qui officiis porro amet reiciendis. Assumenda, quibusdam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur vel sunt dolorem esse incidunt modi rerum reiciendis rem consequatur, et necessitatibus molestiae nulla laboriosam porro? Minima ut dicta dolores eius? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto maxime vel ipsa id vitae. At, magni. Minima deserunt exercitationem repellat deleniti mollitia dolorum incidunt modi, non, at quae nostrum labore.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus at consectetur nam nulla nemo pariatur voluptates cum distinctio illum debitis voluptatem deleniti a, inventore, veniam architecto molestias nisi fuga doloribus.</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt quidem temporibus distinctio quaerat fuga nesciunt explicabo debitis recusandae quae iure tenetur, eaque modi qui officiis porro amet reiciendis. Assumenda, quibusdam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur vel sunt dolorem esse incidunt modi rerum reiciendis rem consequatur, et necessitatibus molestiae nulla laboriosam porro? Minima ut dicta dolores eius? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto maxime vel ipsa id vitae. At, magni. Minima deserunt exercitationem repellat deleniti mollitia dolorum incidunt modi, non, at quae nostrum labore.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus at consectetur nam nulla nemo pariatur voluptates cum distinctio illum debitis voluptatem deleniti a, inventore, veniam architecto molestias nisi fuga doloribus.</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt quidem temporibus distinctio quaerat fuga nesciunt explicabo debitis recusandae quae iure tenetur, eaque modi qui officiis porro amet reiciendis. Assumenda, quibusdam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur vel sunt dolorem esse incidunt modi rerum reiciendis rem consequatur, et necessitatibus molestiae nulla laboriosam porro? Minima ut dicta dolores eius? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto maxime vel ipsa id vitae. At, magni. Minima deserunt exercitationem repellat deleniti mollitia dolorum incidunt modi, non, at quae nostrum labore.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus at consectetur nam nulla nemo pariatur voluptates cum distinctio illum debitis voluptatem deleniti a, inventore, veniam architecto molestias nisi fuga doloribus.</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt quidem temporibus distinctio quaerat fuga nesciunt explicabo debitis recusandae quae iure tenetur, eaque modi qui officiis porro amet reiciendis. Assumenda, quibusdam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur vel sunt dolorem esse incidunt modi rerum reiciendis rem consequatur, et necessitatibus molestiae nulla laboriosam porro? Minima ut dicta dolores eius? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto maxime vel ipsa id vitae. At, magni. Minima deserunt exercitationem repellat deleniti mollitia dolorum incidunt modi, non, at quae nostrum labore.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus at consectetur nam nulla nemo pariatur voluptates cum distinctio illum debitis voluptatem deleniti a, inventore, veniam architecto molestias nisi fuga doloribus.</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt quidem temporibus distinctio quaerat fuga nesciunt explicabo debitis recusandae quae iure tenetur, eaque modi qui officiis porro amet reiciendis. Assumenda, quibusdam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur vel sunt dolorem esse incidunt modi rerum reiciendis rem consequatur, et necessitatibus molestiae nulla laboriosam porro? Minima ut dicta dolores eius? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto maxime vel ipsa id vitae. At, magni. Minima deserunt exercitationem repellat deleniti mollitia dolorum incidunt modi, non, at quae nostrum labore.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus at consectetur nam nulla nemo pariatur voluptates cum distinctio illum debitis voluptatem deleniti a, inventore, veniam architecto molestias nisi fuga doloribus.</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt quidem temporibus distinctio quaerat fuga nesciunt explicabo debitis recusandae quae iure tenetur, eaque modi qui officiis porro amet reiciendis. Assumenda, quibusdam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur vel sunt dolorem esse incidunt modi rerum reiciendis rem consequatur, et necessitatibus molestiae nulla laboriosam porro? Minima ut dicta dolores eius? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto maxime vel ipsa id vitae. At, magni. Minima deserunt exercitationem repellat deleniti mollitia dolorum incidunt modi, non, at quae nostrum labore.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus at consectetur nam nulla nemo pariatur voluptates cum distinctio illum debitis voluptatem deleniti a, inventore, veniam architecto molestias nisi fuga doloribus.</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt quidem temporibus distinctio quaerat fuga nesciunt explicabo debitis recusandae quae iure tenetur, eaque modi qui officiis porro amet reiciendis. Assumenda, quibusdam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur vel sunt dolorem esse incidunt modi rerum reiciendis rem consequatur, et necessitatibus molestiae nulla laboriosam porro? Minima ut dicta dolores eius? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto maxime vel ipsa id vitae. At, magni. Minima deserunt exercitationem repellat deleniti mollitia dolorum incidunt modi, non, at quae nostrum labore.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus at consectetur nam nulla nemo pariatur voluptates cum distinctio illum debitis voluptatem deleniti a, inventore, veniam architecto molestias nisi fuga doloribus.</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt quidem temporibus distinctio quaerat fuga nesciunt explicabo debitis recusandae quae iure tenetur, eaque modi qui officiis porro amet reiciendis. Assumenda, quibusdam! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur vel sunt dolorem esse incidunt modi rerum reiciendis rem consequatur, et necessitatibus molestiae nulla laboriosam porro? Minima ut dicta dolores eius? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto maxime vel ipsa id vitae. At, magni. Minima deserunt exercitationem repellat deleniti mollitia dolorum incidunt modi, non, at quae nostrum labore.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus at consectetur nam nulla nemo pariatur voluptates cum distinctio illum debitis voluptatem deleniti a, inventore, veniam architecto molestias nisi fuga doloribus.</p>
 
 
 </body>
