bootstrap 4 configurações de grid

--- a/exercicos-udemy/html-css/bootstrap4/apoio-grid.html
+++ b/exercicos-udemy/html-css/bootstrap4/apoio-grid.html
@@ -34,9 +34,27 @@
         <div class="row">
 
 
-            <div class="marcador col-6 col-sm-2 col-md-10">área 1</div>
+            <div class="marcador col-md-6 col-xl-4">
 
-            <div class="marcador col-6 col-sm-10 col-md-2">área 2</div>
+              <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolore quia consectetur error libero, cupiditate accusamus iusto, ipsum numquam, molestiae laboriosam iure nostrum? Reprehenderit nostrum hic, possimus doloremque   laboriosam nobis.</p>
+              <button class="btn btn-warning"> Leia Mais </button>
+            </div>
+
+            <div class="marcador col-md-6 col-xl-4">
+
+              <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolore quia consectetur error libero, cupiditate accusamus iusto, ipsum numquam, molestiae laboriosam iure nostrum? Reprehenderit nostrum hic, possimus doloremque laboriosam nobis.</p>
+
+              <button class="btn btn-warning"> Leia Mais </button>
+            </div>
+            <div class="marcador col-md-6 col-xl-4">
+
+              <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolore quia consectetur error libero, cupiditate accusamus iusto, ipsum numquam, molestiae laboriosam iure nostrum? Reprehenderit nostrum hic, possimus doloremque laboriosam nobis.</p>
+              <button class="btn btn-warning"> Leia Mais </button>
+            </div>
+            
         </div>
 
     </div>
