bootstrap : alinhamentos de grid, classes flexbox, e margin-wrap

--- a/exercicos-udemy/html-css/bootstrap4/apoio-configuracoes-grid.html
+++ b/exercicos-udemy/html-css/bootstrap4/apoio-configuracoes-grid.html
@@ -83,6 +83,11 @@
         <div class="marcador col-md-3 offset-md-6">Conteúdo 2</div>
 
       </div>
+      <div class="row">
+        <div class="marcador col-md-3 offset-md-3">Conteúdo 1</div>
+        <div class="marcador col-md-3 offset-md-6">Conteúdo 2</div>
+
+      </div>
       <h2>Aninhamento</h2>
 
       <div class="row" style="border: 1px solid blue;">
