--- a/exercicos-udemy/html-css/Finans/index.html
+++ b/exercicos-udemy/html-css/Finans/index.html
@@ -131,12 +131,12 @@
               </div>
               <div class="col-md-4">
                 <img src="img/economize.png" alt="" class="img-fluid">
-                <h2>Fácil de usar</h2>
+                <h2>Economize seu tempo</h2>
                 <p>Tempo é dinheiro! Em segundos, você tem tudo sob controle e aproveite seu tempo com o que realmente importa pra você </p>
               </div>
               <div class="col-md-4">
                 <img src="img/suporte.png" alt="" class="img-fluid">
-                <h2>Fácil de usar</h2>
+                <h2>Suporte amigo</h2>
                 <p>Dúvidas? Perguntas? Nosso suporte super legal ajuda você! A genta tá aqui pra resolver seus problemas e deixar sua vida bem mais fácil!</p>
               </div>
             </div>   
