--- a/exercicos-udemy/html-css/Spotify/index.html
+++ b/exercicos-udemy/html-css/Spotify/index.html
@@ -32,20 +32,38 @@
             </a>
     
             <button class="navbar-toggler" data-toggle="collapse" data-target="#bah">
-              <i class="fas fa-bars text-white"></i>
+              <i class="fas  fa-bars text-white"></i>
             </button>
+
 
             <div class="collapse navbar-collapse" id="bah">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a href="" class="nav-link">Premium</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Ajuda</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Baixar</a></li>
+                <li class="divisor"></li>
                 <li class="nav-item"><a href="" class="nav-link">Inscreva-se</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Entrar</a></li>
               </ul>
             </div>
           </div>
         </nav>
+
+        <!--    Textos    -->
+    <section id="home" class="d-flex">
+      <div class="container align-self-center">
+
+        <div class="row">
+          <div class="col-md-12 capa">
+            <h1 class="text-white display-1">Musica para todos</h1>
+            <a href="" class="btn btn-danger btn-lg">Aproveite o Spotify Free</a>
+
+            <a href="" class="btn btn-light btn-lg">Obtenha o Spotify Premium</a>
+          </div>
+        </div>
+      </div>
+  
+    </section>
       </header>
 
       <!-- Seção Sobre -->
@@ -58,7 +76,7 @@
               <img class="p-2" src="imagens/img4.jpg" alt="" width="260px">
           </div>
           <div>
-            <h2 class="display-4 font-bold">O que o Spotify tem?</h2>
+            <h2 class="display-4 font-bold ">O que o Spotify tem?</h2>
             <p>O Spotify tem milhões de musicas. Escute seus sons favoritos, descubra novas musicas e </p>
           </div>
       </section>
