--- a/exercicios/ex023/tabela06.html
+++ b/exercicios/ex023/tabela06.html
@@ -21,9 +21,13 @@
         }
         th, td{
             border: 1px solid black;
+            padding: 2px  ;
         }
         tr:nth-child(even){
             background-color: rgb(228, 228 , 228);
+        }
+        div#container{
+            overflow-x: auto;
         }
     </style>
 </head>
@@ -31,28 +35,134 @@
     <h1>Tabelas em telas pequenas</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque blanditiis ipsa quam accusantium fugiat omnis commodi facilis, placeat impedit recusandae culpa, corporis, sit est enim? Nihil obcaecati error alias non!</p>
 
-    <table>
-        <caption>Tabelas Responsivas</caption>
-        <thead>
-            <tr>
-                <th>Produto</th>
-                <th>jan.</th>
-                <th>fev.</th>
-                <th>mar.</th>
-                <th>abr.</th>
-                <th>maio.</th>
-                <th>jun.</th>
-                <th>jul.</th>
-                <th>ago.</th>
-                <th>set</th>
-                <th>out</th>
-                <th>nov</th>
-                <th>dez</th>
-            </tr>
-        </thead>
-        <tbody>
-            
-        </tbody>
-    </table>
+    <div id="container">
+        <table>
+            <caption>Tabelas Responsivas</caption>
+            <thead>
+                <tr>
+                    <th>Produto</th>
+                    <th>jan.</th>
+                    <th>fev.</th>
+                    <th>mar.</th>
+                    <th>abr.</th>
+                    <th>maio.</th>
+                    <th>jun.</th>
+                    <th>jul.</th>
+                    <th>ago.</th>
+                    <th>set</th>
+                    <th>out</th>
+                    <th>nov</th>
+                    <th>dez</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>TV 40"</td>
+                    <td>01</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>01</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>04</td>
+                    <td>16</td>
+                </tr>
+                <tr>
+                    <td>Home theater</td>
+                    <td>01</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>16</td>
+                </tr>
+                <tr>
+                    <td>Samsung Galaxy S20</td>
+                    <td>01</td>
+                    <td>07</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>16</td>
+                </tr>
+                <tr>
+                    <td>iPad Mini</td>
+                    <td>01</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>16</td>
+                </tr>
+                <tr>
+                    <td>Playstation 5</td>
+                    <td>01</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>16</td>
+                </tr>
+                <tr>
+                    <td>Lava-Louças</td>
+                    <td>01</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>01</td>
+                    <td>16</td>
+                </tr>
+                <tr>
+                    <td>Amazon echo</td>
+                    <td>01</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>05</td>
+                    <td>02</td>
+                    <td>01</td>
+                    <td>16</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
