--- a/exercicos-udemy/html-css/Desafios/Es6 - Orçamento Pessoal/consulta.html
+++ b/exercicos-udemy/html-css/Desafios/Es6 - Orçamento Pessoal/consulta.html
@@ -134,8 +134,45 @@
 
       </div>
     </div>
-  </div>
 
+        <!-- Modal -->
+        <div class="modal fade" id="modalFiltro" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div id="modal-titulo-div">
+                <h5 class="modal-title" id="modal_titulo_filtro"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+                <div id="modal-descricao-filtro" class="modal-body">
+                  
+                </div>
+                <div class="modal-footer">
+                  <button type="button" id="botao-filtro" class="" data-dismiss="modal"></button>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="modal fade" id="modalRemover" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div id="modal-titulo-div">
+                <h5 class="modal-title" id="modal_titulo_remover"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+                <div id="modal-descricao-remover" class="modal-body">
+                  
+                </div>
+                <div class="modal-footer">
+                  <button type="button" id="botao-remover" class="" data-dismiss="modal"></button>
+                </div>
+              </div>
+          </div>
+        </div>
+    </div>
   </body>	
 
 </html>
