--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ajustes no Iframe</title>
+    <title>Iframe</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+
+
+        }
+
+        iframe{
+            width: 300px;
+            display: block;
+            margin: auto;
+
+        }
+    </style>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nesciunt quisquam totam ducimus sapiente maxime inventore impedit dolor praesentium illo autem distinctio possimus, fugit, rem at eos, omnis exercitationem necessitatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, ipsum, alias totam odit quasi maxime laboriosam dolor, inventore officia labore ipsa aspernatur quam illo voluptas earum possimus quo hic a.</p>
+
+    <iframe src="pag-iframe.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu navegador não é compátivel com Isso</p>
+    </iframe>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nesciunt quisquam totam ducimus sapiente maxime inventore impedit dolor praesentium illo autem distinctio possimus, fugit, rem at eos, omnis exercitationem necessitatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, ipsum, alias totam odit quasi maxime laboriosam dolor, inventore officia labore ipsa aspernatur quam illo voluptas earum possimus quo hic a.</p>
 </body>
 </html>
