--- a/exercicios/ex025/form001.html
+++ b/exercicios/ex025/form001.html
@@ -6,7 +6,7 @@
     <title>Formulário</title>
     <style>
         *{
-            font-family: Arial, Helvetica, sans-serif;
+            font-family:  Helvetica, sans-serif;
 
         }
         body{
@@ -36,7 +36,7 @@
 </head>
 <body>
     <h1>Formulários</h1>
-    <form action="form001.php" autocomplete="off" method="post">
+    <form action="cadastro.php" autocomplete="off" method="get">
         <label for="nome">Nome:</label>
         <input type="text" name="nome" class="nome">
         <label for="sobrenome">Sobrenome:</label>
