--- a/exercicios/ex025/form001.html
+++ b/exercicios/ex025/form001.html
@@ -9,9 +9,18 @@
             font-family:  Helvetica, sans-serif;
 
         }
+        h1{
+            text-shadow: 2px 2px rgba(194, 84, 24, 0.183);
+            text-indent: 10px;
+        }
         body{
             background-color: rgb(63, 39, 39);
             color: cornsilk;
+        }
+        div{
+            margin-inline-start: 10px;
+            padding: 5px;
+            width: 90vw;
         }
         input{
             border-start-end-radius: 5px;
@@ -32,16 +41,25 @@
         input[type=submit]:hover{
             cursor: pointer;
         }
+        input::placeholder{
+            font-style: italic;
+            
+        }
     </style>
 </head>
 <body>
     <h1>Formulários</h1>
-    <form action="cadastro.php" autocomplete="off" method="get">
-        <label for="nome">Nome:</label>
-        <input type="text" name="nome" class="nome">
-        <label for="sobrenome">Sobrenome:</label>
-        <input type="text" name="sobrenome" id="sobrenome">
-        <input type="submit" value="Enviar">
+    <form action="cadastro.php" autocomplete="on" method="get">
+        <div>
+            <label for="nome">Nome:</label>
+            <input type="text" name="nome" class="nome" required minlength="5" maxlength="15" size="10" placeholder="Ex: Luis" autocomplete="username">
+            <label for="senha">Senha:</label>
+            <input type="text" name="sobrenome" id="sobrenome" required minlength="8" maxlength="20" placeholder="senha" autocomplete="current-password">
+        </div>
+        <div>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </div>
     </form>
 </body>
 </html>
