--- a/exercicios/ex025/form008.html
+++ b/exercicios/ex025/form008.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulários</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    
+    <h1>Exemplo de Formulários</h1>
+    <form action="cadastro.php" method="get" autocomplete="on">
+        <div>
+            <label for="num1">Número 1: </label>
+            <input type="number" name="n1" id="num1" min="0" max="50" required oninput="isoma.innerHTML = Number(num1.value) + Number(num2.value)">
+        </div>
+        <div>
+            <label for="num2">Número 2: </label>
+            <input type="number" name="n1" id="num2" min="0" max="50" required  oninput="isoma.innerHTML = Number(num1.value) + Number(num2.value)">
+        </div>
+        <div>
+            <label for="isoma">Soma: </label>
+            <output name="soma" id="isoma">0</output>
+        </div>
+        <div>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </div>
+    </form>
 </body>
 </html>
