exercício 002 de Media Query

--- a/exercicios/ex026/mq001/index.html
+++ b/exercicios/ex026/mq001/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Queries</title>
     <!-- Chamadas de Media Query -->
-    <link rel="stylesheet" href="estilos/tela.css" media="screen">
-    <link rel="stylesheet" href="estilos/impressora.css" media="print">
+    <link rel="stylesheet" href="estilos/tela.css" media="screen"><!-- Media type normal-->
+    <link rel="stylesheet" href="estilos/impressora.css" media="print"><!-- Media type para impressora-->
 </head>
 <body>
     <header>
