--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css" media="all">
-    <link rel="stylesheet" href="estilos/media-query">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 
 <body>
@@ -15,8 +15,8 @@
         <img id="phone" src="imagens/icon-phone.png" alt="Acessando via smartphone">
         <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via tablet">
         <img id="print" src="imagens/icon-print.png" alt="Acessando via print">
-        <img id="tv" src="imagens/icon-tv.png" alt="Versão para TV">
         <img id="pc" src="imagens/icon-pc.png" alt="Versão para desktop">
+        <img id="tv" src="imagens/icon-tv.png" alt="Versão para TV">
     </main>
 </body>
 
