--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>F1 Urgente</h1>
         <span id="burger" class="material-symbols-outlined" onclick="abrirMenu()" >
